--- a/build.xml
+++ b/build.xml
@@ -11,6 +11,7 @@
         <javac destdir="out">
             <src path="src:test"/>
             <classpath location = "lib/junit-4.11.jar"/>
+            <classpath location = "lib/system-rules-1.12.0.jar"/>
         </javac>
     </target>
 
@@ -18,6 +19,7 @@
         <junit printsummary="true" haltonfailure="true" outputtoformatters="true">
             <classpath>
                 <pathelement location="lib/junit-4.11.jar"/>
+                <pathelement location="lib/system-rules-1.12.0.jar"/>
                 <pathelement location="out"/>
             </classpath>
 
