--- a/build.xml
+++ b/build.xml
@@ -12,6 +12,7 @@
             <src path="src:test"/>
             <classpath location = "lib/junit-4.11.jar"/>
             <classpath location = "lib/system-rules-1.12.0.jar"/>
+            <classpath location = "lib/mockito-all-1.9.5.jar"/>
         </javac>
     </target>
 
@@ -21,6 +22,7 @@
                 <pathelement location="lib/junit-4.11.jar"/>
                 <pathelement location="lib/system-rules-1.12.0.jar"/>
                 <pathelement location="out"/>
+                <pathelement location = "lib/mockito-all-1.9.5.jar"/>
             </classpath>
 
             <batchtest fork="yes" haltonfailure="true">
